added a test to check the server

--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
-
       - name: Run ESLint
         run: npm run lint
+
+      - name: Perform Health Check
+        run: npm run test
