--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "node scripts/health-check.mjs",
     "dev": "nodemon ./src/index.mjs",
     "start": "node ./src/index.mjs",
     "lint": "eslint .",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^9.33.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   }
 }
