added health check to the server

--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-      - name: Perform Health Check
-        run: npm run test
+      - name: Run Health Check
+        run: npm run health
